add nrk core components dialog

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,51 +1,29 @@
 .modal {
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-.modal-header {
+  align-items: center;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.modal-complete-button{
-  margin-top: 1rem;
-}
-
-.modal-is-open {
-  display: block;
-}
-
-.modal-is-closed {
-  display: none;
+  grid-template: 1fr/55rem;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  position: relative;
+  margin: 50px;
+  background-color: white;
+  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.3);
   padding: 1rem;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
 }
 
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+.modal-close-button {
+  position: absolute;
+  height: 2rem;
+  top: 1rem;
+  right: 1rem;
 }
