--- a/src/components/Scorebutton/ScoreButton.css
+++ b/src/components/Scorebutton/ScoreButton.css
@@ -22,3 +22,14 @@
   color: white;
   background-image: url("./norway.png");
 }
+
+.select-component {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.add-points-button {
+  display: block;
+  margin: 1rem auto 0 auto;
+}
