--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -1,4 +1,17 @@
-.category{
-    display: flex;
-    flex-direction: column;
+.category {
+  display: flex;
+  flex-direction: column;
+}
+
+.category-name {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.category-name-input {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 19px;
 }
