--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,6 +1,11 @@
-.board{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 1rem;
-    padding: 5rem;
+.board {
+  display: flex;
+  flex-direction: column;
+  padding: 5rem;
+}
+
+.board-categories {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1rem;
 }
