--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,11 +15,18 @@
 .add-team-form {
   display: flex;
   flex-direction: column;
-  padding: 1rem 0;
+  padding: 2rem 0;
 }
 
 .error {
   color: red;
+}
+
+.add-team-form-name {
+  width: 100%;
+  padding: 1rem;
+  border: 1px solid black;
+  border-radius: 4px;
 }
 
 .registered-teams {
