--- a/src/components/Scorebutton/ScoreButton.css
+++ b/src/components/Scorebutton/ScoreButton.css
@@ -29,11 +29,21 @@
   padding: 2rem 0;
 }
 
-.select-component-input{
+.select-component-input {
   width: 100%;
   padding: 1rem;
   border: 1px solid black;
   border-radius: 4px;
+}
+
+.checkbox-component {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 1rem 0 0;
+}
+
+.checkbox-component-label {
+  margin-left: 1rem;
 }
 
 .add-points-button {
