--- a/src/components/Scorebutton/ScoreButton.scss
+++ b/src/components/Scorebutton/ScoreButton.scss
@@ -4,25 +4,26 @@
   padding: 0.5rem;
   text-align: center;
   font-weight: bold;
+
+  &__disabled {
+    border: 2px solid red;
+    color: white;
+    background-image: url("./norway.png");
+  }
+
+  &__not-disabled {
+    cursor: pointer;
+    border: 2px solid black;
+    background: none;
+
+    &:hover {
+      background-color: navy;
+      color: red;
+    }
+  }
 }
 
-.score-button-not-disabled {
-  cursor: pointer;
-  border: 2px solid black;
-  background: none;
-}
-
-.score-button-not-disabled:hover {
-  background-color: navy;
-  color: red;
-}
-
-.score-button-disabled {
-  border: 2px solid red;
-  color: white;
-  background-image: url("./norway.png");
-}
-
+//TODO Få denne ut i en egen komponent
 .select-component {
   display: flex;
   flex-direction: column;
