--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -1,7 +1,5 @@
 .board {
-  display: flex;
-  flex-direction: column;
-  padding: 5rem;
+  margin-top: 5rem;
 
   &__categories {
     display: grid;
