--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -11,7 +11,8 @@
 
   &__name-input {
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
     font-size: 19px;
+    color: black;
   }
 }
