--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,13 @@
 @import "utilities/colors.scss";
 
 .App {
-  text-align: center;
   font-family: Arial, Courier, Helvetica, serif;
   min-height: 100%;
   background-color: $blue;
   color: $yellow;
+  display: flex;
+  flex-direction: column;
+  padding: 5rem;
 }
 
 #root{
