--- a/src/components/GameInfo/GameInfo.scss
+++ b/src/components/GameInfo/GameInfo.scss
@@ -1,7 +1,9 @@
 .game-info {
-  width: 20%;
-  padding: 5rem 0;
-  text-align: left;
+  padding: 2rem 0;
+
+  &__select{
+    width: 50%;
+  }
 
   &__links {
     display: flex;
