--- a/src/components/Scorebutton/ScoreButton.scss
+++ b/src/components/Scorebutton/ScoreButton.scss
@@ -34,8 +34,7 @@
 .select-component-input {
   width: 100%;
   padding: 1rem;
-  border: 1px solid $yellow;
-  background-color: $blue;
+  border: 1px solid black;
   border-radius: 4px;
 }
 
