--- a/src/components/MenuButton/MenuButton.scss
+++ b/src/components/MenuButton/MenuButton.scss
@@ -1,7 +1,7 @@
 @import "src/utilities/colors.scss";
 
 .menu-button {
-  font-size: 12pt;
+  text-decoration: underline;
 
   &:hover {
     color: white;
