--- a/src/AddTeamModal/AddTeamModal.scss
+++ b/src/AddTeamModal/AddTeamModal.scss
@@ -8,13 +8,13 @@
     margin: 1rem auto 0 auto;
     font-size: 12pt;
     padding: 1rem;
-    border: 2px solid $yellow;
+    border: 2px solid black;
     border-radius: 100px;
 
     &:hover {
-      color: $blue;
-      background-color: $yellow;
-      border: 2px solid $blue;
+      color: white;
+      background-color: black;
+      border: 2px solid black;
       transition: 500ms;
     }
   }
