--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -12,7 +12,7 @@
   &__name-input {
     margin-top: 20px;
     margin-bottom: 12px;
-    font-size: 19px;
+    font-size: 1rem;
     color: black;
   }
 }
